--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <com.pxz.pxztitlebar.TitleBarView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:isLeft="false"
+        app:isRight="false"
+        app:titleBarText="工具类" />
 </LinearLayout>
